force-app/main/default/objects/Pemilik_Sertifikat__c/Pemilik_Sertifikat__c.object-meta.xml
<CustomObject>
    <label>Pemilik Sertifikat</label>
    <nameField>
        <label>Nama</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pemilik Sertifikats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>