force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Akta_Kematian_Widowed_Pemilik_Sertipik__c.field-meta.xml
<CustomField>
    <fullName>Akta_Kematian_Widowed_Pemilik_Sertipik__c</fullName>
    <label>Akta Kematian (Widowed) Pemilik Sertipik</label>
    <length>255</length>
    <type>Text</type>
</CustomField>