force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Akta_Nikah_Married_Pemilik_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Akta_Nikah_Married_Pemilik_Sertipikat__c</fullName>
    <label>Akta Nikah (Married) Pemilik Sertipikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>