force-app/main/default/objects/Pemilik_Sertifikat__c/fields/City_Kabupaten_Seller__c.field-meta.xml
<CustomField>
    <fullName>City_Kabupaten_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>City / Kabupaten Seller</description>
    <label>City / Kabupaten Seller</label>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Pemilik Sertifikats (City / Kabupaten Seller)</relationshipLabel>
    <relationshipName>Pemilik_Sertifikats1</relationshipName>
    <type>Lookup</type>
</CustomField>