force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Detail_Marital_Status_Pemilik_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Detail_Marital_Status_Pemilik_Sertipikat__c</fullName>
    <label>Detail Marital Status Pemilik Sertipikat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legally Married</fullName>
            </value>
            <value>
                <fullName>Unregistered Married</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>