force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Divorce_Date_Pemilik_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Divorce_Date_Pemilik_Sertipikat__c</fullName>
    <label>Divorce Date Pemilik Sertipikat</label>
    <type>Date</type>
</CustomField>