force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Kecamatan_Seller__c.field-meta.xml
<CustomField>
    <fullName>Kecamatan_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kecamatan Seller</description>
    <label>Kecamatan Seller</label>
    <referenceTo>District_Master_Data__c</referenceTo>
    <relationshipLabel>Pemilik Sertifikats (Kecamatan Seller)</relationshipLabel>
    <relationshipName>Pemilik_Sertifikats1</relationshipName>
    <type>Lookup</type>
</CustomField>