force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Kelurahan_Pemilik_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Kelurahan_Pemilik_Sertipikat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kelurahan Pemilik Sertipikat</label>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Pemilik Sertifikats</relationshipLabel>
    <relationshipName>Pemilik_Sertifikats</relationshipName>
    <type>Lookup</type>
</CustomField>