force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Nama_Pemilik_Sertipikat_BadanUsaha__c.field-meta.xml
<CustomField>
    <fullName>Nama_Pemilik_Sertipikat_BadanUsaha__c</fullName>
    <label>Nama Pemilik Sertipikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>