force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Nama_Seller__c.field-meta.xml
<CustomField>
    <fullName>Nama_Seller__c</fullName>
    <description>Nama Seller</description>
    <label>Nama Seller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>