force-app/main/default/objects/Pemilik_Sertifikat__c/fields/NPWP_Number_Pemilik_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>NPWP_Number_Pemilik_Sertipikat__c</fullName>
    <label>NPWP Number Pemilik Sertipikat</label>
    <length>32</length>
    <type>Text</type>
</CustomField>