force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Province_Pemilik_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Province_Pemilik_Sertipikat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province Pemilik Sertipikat</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Pemilik Sertifikats</relationshipLabel>
    <relationshipName>Pemilik_Sertifikats</relationshipName>
    <type>Lookup</type>
</CustomField>