force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Province_Seller__c.field-meta.xml
<CustomField>
    <fullName>Province_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Province Seller</description>
    <label>Province Seller</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Pemilik Sertifikats (Province Seller)</relationshipLabel>
    <relationshipName>Pemilik_Sertifikats1</relationshipName>
    <type>Lookup</type>
</CustomField>