force-app/main/default/objects/Pemilik_Sertifikat__c/fields/RT__c.field-meta.xml
<CustomField>
    <fullName>RT__c</fullName>
    <label>RT Pemilik Sertipikat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>