force-app/main/default/objects/Pemilik_Sertifikat__c/fields/RW__c.field-meta.xml
<CustomField>
    <fullName>RW__c</fullName>
    <label>RW Pemilik Sertipikat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>