force-app/main/default/objects/Pemilik_Sertifikat__c/fields/RW_Seller__c.field-meta.xml
<CustomField>
    <fullName>RW_Seller__c</fullName>
    <label>RW Seller</label>
    <length>10</length>
    <type>Text</type>
</CustomField>