force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Spouse_Birth_Date_Pemilik_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Birth_Date_Pemilik_Sertipikat__c</fullName>
    <label>Spouse Birth Date Pemilik Sertipikat</label>
    <type>Date</type>
</CustomField>