force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Spouse_ID_Number_Pemilik_Sertifikat__c.field-meta.xml
<CustomField>
    <fullName>Spouse_ID_Number_Pemilik_Sertifikat__c</fullName>
    <label>Spouse ID Number Pemilik Sertifikat</label>
    <length>32</length>
    <type>Text</type>
</CustomField>