force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Spouse_Legal_Name_Pemilik_Sert__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Legal_Name_Pemilik_Sert__c</fullName>
    <label>Spouse Legal Name Pemilik Sertifikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>