force-app/main/default/objects/Pemilik_Sertifikat__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Pemilik Sertifikats</relationshipLabel>
    <relationshipName>Pemilik_Sertifikats</relationshipName>
    <type>Lookup</type>
</CustomField>